[tool.poetry]
name = "groundingdino"
version = "0.1.0"
description = "GroundingDino"
readme = "README.md"
documentation = "https://github.com/IDEA-Research/GroundingDINO/blob/main/README.md"
repository = "https://github.com/IDEA-Research/GroundingDINO"
authors = [
    "IDEA-Research",
]
license = ""
packages = [
    { include = "groundingdino" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = { version = "2.2.2+cu118", source = "torch" }
torchvision = { version = "0.17.2+cu118", source = "torch" }
torchaudio = { version = "2.2.2+cu118", source = "torch" }
transformers = "^4.27.4"
addict = "2.4.0"
yapf = "0.40.1"
timm = "0.9.2"
numpy = "^1.24.2"
opencv_python = "^4.7.0.72"
supervision = "0.6.0"
pycocotools = "2.0.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
commitizen = "2.27.0"
pytest = "^7.1.2"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core >= 1.4.0"]
build-backend = "poetry.core.masonry.api"